# my-devlog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.py  pyproject.toml  uninstall.py  upgrade.py
.claude-plugin/: .mcp.json  plugin.json
.claude-plugin/skills/: devlog-auto.md
.cursor/rules/: devlog.md
.devlog/: config.md
devlog/: __init__.py  auto_record.py  backup.py  config.py  init.py  kimi_tool.py  mark_done.py  mcp_server.py  obsidian.py  search.py  sync.py
docs/: 2026-05-12-Review报告.md  TEST_GUIDE.md  USAGE.md  使用手册.md
examples/git-hooks/: post-commit
kimi-plugin/: plugin.json
kimi-plugin/skills/: devlog-log-today.md  devlog-slash-commands.md
my_devlog/: __init__.py  auto_record.py  backup.py  config.py  init.py  kimi_tool.py  mark_done.py  mcp_server.py  obsidian.py  search.py  statusline.py  sync.py  todo_stats.py  webui.py
skills/claude/commands/: log-auto.md  log-bug.md  log-devlog.md  log-done.md  log-idea.md  log-inbox.md  log-learn.md  log-review.md  log-sync.md  log-todo.md  log-weekly.md  my-devlog.md
skills/kimi/skills/: devlog-log-today.md  devlog-slash-commands.md
skills/opencode/: devlog-config.md
templates/: daily.en.md  daily.md  project-update.md  weekly-review.md
tests/: test_config.py  test_mark_done.py  test_search.py  test_sync.py  test_todo_stats.py
tools/: README.md  start-server.bat  web_highlight_server.py
web-highlight-ext/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
web-highlight-ext/icons/: README.md
