[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-devlog"
version = "0.1.1"
description = "AI-Native Developer Journal — Log, sync, and review your daily dev life"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.20",
]
authors = [
    { name = "My DevLog Contributors" },
]
keywords = ["devlog", "journal", "productivity", "markdown", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

[project.scripts]
devlog-sync = "devlog.sync:main"
devlog-mark-done = "devlog.mark_done:main"
devlog-search = "devlog.search:main"
devlog-backup = "devlog.backup:main"
devlog-obsidian = "devlog.obsidian:main"
devlog-mcp = "devlog.mcp_server:main"
devlog-auto-record = "devlog.auto_record:main"

[project.optional-dependencies]
web = ["streamlit>=1.30.0"]

[project.urls]
Homepage = "https://github.com/yourusername/my-devlog"
Repository = "https://github.com/yourusername/my-devlog"
Issues = "https://github.com/yourusername/my-devlog/issues"
